Адаптивные размеры шрифтов

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!--FOOTER-->
     <footer id="footer">
-      <p id="copyright" itemprop="copyright" class="footer-text">AWP © <span id="current-year">2019</span> <span id="author">Plague Fox</span></p>
+      <p id="copyright" itemprop="copyright" class="footer-text"><span>AWP</span> <span>©</span> <span id="current-year">2019</span> <span id="author">Plague Fox</span></p>
     </footer>
 
     <!--CLOUDS CSS ANIMATION-->
