--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
     </div>
 
     <!--HEADER-->
-    <header id="header"></header>
+    <header id="header">
+      <object class="header-logo" data="img/logo.svg" type="image/svg+xml">
+        <img src="img/logo.png" alt="">
+      </object>
+    </header>
 
     <!--NO SCRIPT-->
     <noscript>
